--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,36 +35,24 @@
         <filter-name>CORS</filter-name>
         <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
         <init-param>
-            <param-name>cors.allowGenericHttpRequests</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
             <param-name>cors.allowOrigin</param-name>
             <param-value>*</param-value>
         </init-param>
         <init-param>
-            <param-name>cors.allowSubdomains</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
             <param-name>cors.supportedMethods</param-name>
-            <param-value>GET, HEAD, POST, OPTIONS</param-value>
+            <param-value>GET, POST, HEAD, PUT, DELETE</param-value>
         </init-param>
         <init-param>
             <param-name>cors.supportedHeaders</param-name>
-            <param-value>Content-Type, X-Requested-With</param-value>
+            <param-value>Accept, Origin, X-Requested-With, Content-Type, Last-Modified</param-value>
         </init-param>
         <init-param>
             <param-name>cors.exposedHeaders</param-name>
-            <param-value>X-Test-1, X-Test-2</param-value>
+            <param-value>Set-Cookie</param-value>
         </init-param>
         <init-param>
             <param-name>cors.supportsCredentials</param-name>
             <param-value>true</param-value>
-        </init-param>
-        <init-param>
-            <param-name>cors.maxAge</param-name>
-            <param-value>-1</param-value>
         </init-param>
     </filter>
 
